# sphinx-template

./: .gitignore  README.md  conf.py  index.rst  pyproject.toml  routes.json  serve.sh
.github/worksflows/: azure-static-web-app.yaml
_static/css/: custom.css
