[tool.poetry]
name = "sphinx-template"
version = "0.1.0"
description = ""
authors = ["Kasper Hjorth Hansen <email@email.email>"]

[tool.poetry.dependencies]
python = "^3.8"
sphinx-rtd-theme = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
